# ecc-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: USER_GUIDE.md
ecc_manager/: __init__.py  cli.py  core.py  default_profiles.py  server.py
ecc_manager/web/: __init__.py  app.js  index.html  style.css
scripts/: install-local.sh
tests/: test_core.py  test_server.py
